Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with
email address.

2007-Dec-17 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew:
	some changes about zones: enhanced dialog, and files reorganisation.


2007-Dec-14 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew
    WinEDA_PcbFrame::Other_Layer_Route() now returns bool, so that if the DRC
    would not allow the new via placement, then it can be checked and the layer
    change can also then be aborted.  Previously the layer change would happen
    in mid track if the via could not be placed.


2007-Dec-13 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew
  * surbrill.cpp's int WinEDA_PcbFrame::Select_High_Light( wxDC* DC )
    was re-written to use the GENERAL_COLLECTOR, and the scanList is set to
    give pads a higher search priority than tracks, vias or zones.
    The objective was to use the pad if possible, rather than a track on a pad,
    so the pad can be sent to eeschema.  Finding the track only (even though
    on a pad) would not send anything to eeschema.


2007-Dec-12 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew
  * Fized zone drawing bug in svn HEAD only.
    pcbnew/zones.cpp, see:
    http://tech.groups.yahoo.com/group/kicad-users/message/2993

    
2007-Dec-11 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+all
  * Fixed hotkey table for '+' and '-' bug.  The lookup table in 
    common/hotkeys_basic.cpp had bad entries for + and -.  These hotkeys
    were not working on Linux.